# src/routes.js
@@ -1,6 +1,7 @@
 import { Router } from 'express'
 import * as UserController from './controllers/UserController'
 import * as LoginController from './controllers/LoginController'
+import * as BusinessController from './controllers/BusinessController'
 
 import checkUserAuth from './middlewares/checkUserAuth'
 
@@ -19,6 +20,8 @@ router.post('/register', UserController.create)
 router.get('/users/:id', checkUserAuth, UserController.view)
 router.delete('/users/:id', checkUserAuth, UserController.destroy)
 
+router.post('/business/new', checkUserAuth, BusinessController.create)
+router.get('/users/:id/businesses', checkUserAuth, BusinessController.getByUser)
 router.post('/login', LoginController.authorizeUser)
 
 export default router
